# synapsePythonClient

./: .coveragerc  .env.example  .flake8  .gitignore  .pep8speaks.yml  .pre-commit-config.yaml  .readthedocs.yaml  .synapseConfig  .travis.yml  404.html  CITATION.cff  CLAUDE.md  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  ISSUE_TEMPLATE.md  MANIFEST.in  Pipfile  README.md  SECURITY.md  agent_test.py  appveyor.yml  bdf.yaml  build.sh  build_electron_app.bat  build_electron_app.sh  build_gui.sh  build_windows_native.bat  build_windows_native_gui.bat  codemeta.json  compliance-config.json  conf.py  driveTestingOtelPoc.py  gui_entrypoint.py  index.html  index.rst  main.py  minimal_synapse_cli.py  mkdocs.yml  (+16 more)
.github/: CODEOWNERS  pull_request_template.md
.github/scripts/: delete_evaluations.py  delete_projects.py  delete_teams.py  empty_trash.py  sync_version_metadata.py
.github/workflows/: build-docs.yml  build.yml  codeql-analysis.yml  docker_build.yml  release.yml  sync-version-metadata.yml  test-cleanup.yml  test.yml  trivy.yml  trivy_periodic_scan.yml  validate-release.yml
CLAUDE/: index.html
_static/: Client.rst  Entity.rst  Evaluation.rst  Utilities.rst  Wiki.rst
constants/: __init__.py
doc/: Makefile  Table.rst  Team.rst  Utilities.rst  Versions.rst  conf.py  index.rst  sftp.rst  synapseutils.rst
doc/_static/: Activity.rst  Annotations.rst  Client.rst  CommandLineClient.rst  Entity.rst  Evaluation.rst  Wiki.rst  custom.css
doc/_templates/: layout.html
docs/: Activity.rst  Annotations.rst  CLAUDE.md  CNAME  CommandLineClient.rst  Credentials.rst  Makefile  Multipart_upload.rst  S3Storage.rst  Team.rst  Upload.rst  Versions.rst  Views.rst  Wiki.rst  cli.rst  conf.py  index.html  index.md  index.rst  make.bat  news.md  news.rst  requirements.txt  reticulate.rst  synapseutils.rst
docs/_static/: custom.css
docs/_templates/: layout.html
docs/api/: Client.rst  Evaluation.rst  JsonSchema.rst  Multipart_upload.rst  Team.rst  Utilities.rst  core.rst
docs/articles/: S3Storage.rst  api.rst  benchmarking.rst  cli.rst  data_storage.rst  permissions.rst  sftp.rst  synapseutils.rst  tables.rst  validate_annotations.rst
docs/css/: custom.css
docs/explanations/: access_control.md  asyncio_in_python_3_14.md  benchmarking.md  curator_data_model.md  domain_models_of_synapse.md  file_cache.md  home.md  manifest_csv.md  manifest_tsv.md  properties_vs_annotations.md  storage_location_architecture.md  structuring_your_project.md
docs/getting_started/: basics.rst  cli.rst  configuration.rst  credentials.rst  installation.rst
docs/guides/: README  accessing_the_rest_api.md  data_storage.md  home.md  synapse_mcp.md  validate_annotations.md  views.md
docs/js/: mermaid-init.js
docs/reference/: activity.md  annotations.md  cli.md  client.md  core.md  docker_repository.md  download_list.md  entity.md  evaluation.md  exceptions.md  file.md  folder.md  json_schema.md  link.md  permissions.md  project.md  rest_apis.md  synapse_utils.md  synapseclient.md  table_schema.md  tables.md  teams.md  view_schema.md  wiki.md
docs/scripts/: benchmark.py  downloadBenchmark.py  print_release_issues.py  uploadBenchmark.py  uploadTestFiles.py
docs/tutorials/: authentication.md  cli.md  command_line_client.md  configuration.md  file_versioning.md  home.md  installation.md  json_schema.md  python_client.md  reticulate.md  tables.md
docs_site/: 404.html  index.html  objects.inv
docs_site/assets/: _mkdocstrings.css
docs_site/news/: index.html
docs_site/scripts/: downloadBenchmark.py  print_release_issues.py  uploadBenchmark.py  uploadTestFiles.py
docs_site/search/: search_index.json
examples/provenance/: data.txt  generate_random_data.py  provenance.sh  square.py  squares.txt
explanations/: README
explanations/access_control/: index.html
explanations/asyncio_in_python_3_14/: index.html
explanations/benchmarking/: index.html
explanations/curator_data_model/: index.html
explanations/domain_models_of_synapse/: index.html
explanations/home/: index.html
explanations/manifest_csv/: index.html
explanations/manifest_tsv/: index.html
explanations/properties_vs_annotations/: index.html
explanations/storage_location_architecture/: index.html
explanations/structuring_your_project/: index.html
news/: index.html
reference/: README
release_notes/: release-1.6.1.md  release-1.7.0.md  release-1.7.1.md  release-1.7.3.md  release-1.7.md  release-1.8.0.md  release-1.8.1.md  release-1.8.2.md
scripts/: downloadBenchmark.py  print_release_issues.py  uploadBenchmark.py
search/: search_index.json
synapse/: __main__.py  client.py  integration_test.py  simpleworkflow.py  tcgaMetadata.py  utils.py  version_check.py
synapse-electron/: .electron-builder.json  README.md  main.js  package-lock.json  package.json  preload.js  start.bat  start.sh
synapseclient/: .synapseConfig  __init__.py  __main__.py  __version__.py  activity.py  annotations.py  cache.py  client.py  client_async.py  client_delegated_storage.py  concrete_types.py  constants.py  credential_provider.py  custom_json.py  dict_object.py  download_functions.py  doze.py  dozer.py  entity.py  entity2.py  evaluation.py  exceptions.py  integration_test.py  integration_test_Entity.py  lock.py  logging_setup.py  multipart_upload.py  multiprocessing_wrapper.py  pool_provider.py  producer_consumer_download_threads.py  remote_file_connection.py  remote_file_storage_wrappers.py  retry.py  schema.py  synapsePythonClient  table.py  team.py  test_command_line_client.py  unit_test_DictObject.py  unit_test_Entity.py  (+7 more)
synapsegui/: README.md  build.sh  build_windows_native_gui.bat  main.py  refactored_main.py  synapse_gui.py
synapseutils/: CLAUDE.md  __init__.py  copy.py  copyWiki.py  copy_functions.py  describe.py  describe_functions.py  migrate_functions.py  monitor.py  synapsePythonClient  sync.py  walk.py  walk_functions.py
test_scripts/: oop_poc_file.py  oop_poc_folder.py  oop_poc_project.py  oop_poc_table.py  oop_poc_team.py  synapse_project.py
tests/: CLAUDE.md  test_utils.py
tutorials/: README
(+942 files in other folders)
