
[metadata]
name = synapseclient
description = A client for Synapse, a collaborative, open-source research platform that allows teams to share data, track analyses, and collaborate.
author = The Synapse Engineering Team
author_email = platform@sagebase.org
license = Apache-2.0
license_files = LICENSE.txt
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8; variant=GFM
url = https://www.synapse.org
project_urls =
    Source = https://github.com/Sage-Bionetworks/synapsePythonClient
    Tracker = https://github.com/Sage-Bionetworks/synapsePythonClient/issues
    Documentation = https://python-docs.synapse.org
    Changelog = https://python-docs.synapse.org/build/html/index.html#release-notes

# Change if running only on Windows, Mac or Linux (comma-separated)
platforms = any

# Add here all kinds of additional classifiers as defined under
# https://pypi.org/classifiers/
classifiers =
    Development Status :: 5 - Production/Stable
    Programming Language :: Python
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Operating System :: MacOS
    Operating System :: Microsoft :: Windows
    Operating System :: Unix
    Operating System :: POSIX :: Linux
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License
    Topic :: Software Development :: Libraries
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Bio-Informatics

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.8
install_requires =
    # "requests>=2.22.0,<2.30.0; python_version<'3.10'",
    requests>=2.22.0,<3.0
    urllib3>=1.26.18,<2
    # "urllib3>=2; python_version>='3.10'",
    deprecated>=1.2.4,<2.0
    opentelemetry-api~=1.21.0
    opentelemetry-sdk~=1.21.0
    opentelemetry-exporter-otlp-proto-http~=1.21.0
    nest-asyncio~=1.6.0
    asyncio-atexit~=1.0.1
    httpx~=0.27.0
    tqdm>=4.66.2,<5.0
    loky~=3.0.0
    async-lru~=2.0.4
    psutil~=5.9.8
tests_require =
    pytest>=8.0.0,<9.0
    pytest-mock>=3.0,<4.0
    pytest-socket>=0.6.0,<1.0
    pytest-asyncio>=0.23.6 ,<1.0
    flake8>=3.7.0,<4.0
    pytest-xdist[psutil]>=2.2,<3.0.0
    pytest-rerunfailures>=14.0,<15.0
    func-timeout>=4.3,<5.0
    pytest-cov>=5,<6.0

[options.extras_require]
dev =
    pytest>=8.0.0,<9.0
    pytest-mock>=3.0,<4.0
    pytest-socket>=0.6.0,<1.0
    pytest-asyncio>=0.23.6 ,<1.0
    flake8>=3.7.0,<4.0
    pytest-xdist[psutil]>=2.2,<3.0.0
    pytest-rerunfailures>=14.0,<15.0
    func-timeout>=4.3,<5.0
    pytest-cov>=5,<6.0
    black
    pre-commit

tests =
    pytest>=8.0.0,<9.0
    pytest-mock>=3.0,<4.0
    pytest-socket>=0.6.0,<1.0
    pytest-asyncio>=0.23.6 ,<1.0
    flake8>=3.7.0,<4.0
    pytest-xdist[psutil]>=2.2,<3.0.0
    pytest-rerunfailures>=14.0,<15.0
    func-timeout>=4.3,<5.0
    pytest-cov>=5,<6.0

pandas =
    pandas>=1.5,<3.0

pysftp =
    pysftp>=0.2.8,<0.3

boto3 =
    boto3>=1.7.0,<2.0

docs =
    mkdocs>=1.5.3
    mkdocs-material>=9.4.14
    mkdocstrings>=0.24.0
    mkdocstrings-python>=1.7.5
    termynal>=0.11.1
    mkdocs-open-in-new-tab~=1.0.3
    markdown-include~=0.8.1


[options.entry_points]
console_scripts =
    synapse = synapseclient.__main__:main

[options.package_data]
synapseclient =
    synapsePythonClient
    .synapseConfig

[options.packages.find]
exclude = tests*

[flake8]

# pep8 default is 80
max-line-length: 120

exclude =
    .*
    build
    docs
    dist


[tool:pytest]

python_files =
    test_*.py
    *_test.py
    *_test_*.py
